# sourdough-monitor

./: .firebaserc  .gitignore  README.md  analyze.py  capture.sh  capture_daemon.sh  chart.py  com.sourdough.monitor.plist  com.sourdough.tunnel.plist  cv_analyze.py  dashboard.py  db.py  firebase.json  firebase_sync.py  firestore.rules  monitor.py  notify.py  pyproject.toml  reanalyze_now.py  requirements.txt  setup.sh  test_cv.py  test_cv_saturation.py  test_matplotlib.py  timelapse.py  upload_photos_to_drive.py
.firebase/: hosting.ZGFzaGJvYXJk.cache
dashboard/: index.html  manifest.json  sw.js
dashboard/css/: charts.css  jar-frame.css  lightbox.css  main.css  mobile.css
dashboard/js/: app.js  calibration.js  charts.js  gallery.js  measurement-detail.js  utils.js
dashboard/js/mobile/: calibrate.js  home.js  main.js
dashboard/js/shared/: jar-frame.js
data/: dataset_corrections.json  flash.html
data/ml_dataset/: manual_labels.json  samples_to_label.json
scripts/: backfill_firestore.py  migrate_db.py
scripts/labeling/: index.html  select_samples.py  server.py
scripts/ml/: backfill_ml_altura.py  evaluate.py  prepare_dataset.py  retrain_from_corrections.py  sync_corrections.py  train.py
src/sourdough/: __init__.py  __main__.py  config.py  log.py  models.py
src/sourdough/db/: __init__.py  connection.py  migrations.py  repository.py
src/sourdough/integrations/: __init__.py  firebase.py  gdrive.py
src/sourdough/services/: __init__.py  analyzer.py  (+11 more)
tests/: conftest.py  test_config.py  test_measurement.py  test_peak_detector.py  test_repository.py
(+6 files in other folders)
